# paper_Mohamed_2023_humanoids_nonlinear-ft-calibration

./: .gitignore  CMakeLists.txt  README.md  environment.yml
instructions/: installation.md  usage.md
software/: CMakeLists.txt
software/calibration_scripts/: GenerateExperimentsPlots.m  calib_leftArm.m  calib_leftArm_lasso.m  calib_rightArm.m  calib_rightArm_lasso.m  parse_data.m
software/calibration_scripts/1to5degree_qp_rightArm/: 1st_degree.xml  2nd_degree.xml  3rd_degree.xml  4th_degree.xml  5th_degree.xml
software/calibration_scripts/4degree_qplasso_rightArm/: 4th_degree_lambda=0.5.xml  4th_degree_lambda=1.xml  4th_degree_lambda=10.xml  4th_degree_lambda=100.xml  4th_degree_lambda=200.xml  4th_degree_lambda=50.xml
software/cmake/templates/: setup.in
software/matlab_classes/: CMakeLists.txt
software/matlab_classes/@Experiment/: CMakeLists.txt  Experiment.m  animate3DForcesTorques.m  appendDataFromParser.m  applyAdjTransformFromOutput.m  getFTRawData.m  plot3Dforce.m  plot3DforceAndTorque.m  plot3Dtorque.m  plotAll.m  plotAllError.m  plotAllNorm.m  plotInOut.m  plotResAutCorrAll.m  plotXYtemperature.m  predictAllModels.m  removeDatasetOffset.m  scaleInputData.m  showStats.m
software/matlab_classes/@FTCalibParser/: CMakeLists.txt  FTCalibParser.m  README.md  buildDatasetsFileStruct.m  computeExpectedValues.m  configComputingExpectedValues.m  deleteExpectedValues.m  parseInputOutput.m  plotParsedDataset.m  showDirDetails.m
software/matlab_classes/@FTSensor/: CMakeLists.txt  FTSensor.m  exportModelsXMLtoDir.m  importModelsXMLfromDir.m  loadCalibMatrixToModel.m  setOrigCalibMatrix.m
software/matlab_classes/@Model/: CMakeLists.txt  Model.m  buildRegressor.m  computeAutoCorr.m  computeBestFit.m  computeRMSE.m  exportModelXML.m  identifyParametersLS.m  identifyParametersQP.m  identifyParametersQPLASSO.m  identifyParametersQPLASSO_3.m  identifyParametersQPLASSO_BruteForce.m  identifyParametersQPLASSO_notWorking_1.m  identifyParametersQPLASSO_notWorking_2.m  importModelXML.m  predictOutput.m  predictOutput_fast.m  setParametersValue.m  setWorkBenchModel.m
urdf_models/: model_l0kg-r0kg.urdf  model_l0kg-r10kg.urdf  model_l0kg-r7kg.urdf  model_l2kg-r2kg.urdf  model_l4kg-r4kg.urdf  model_l5kg-r0kg.urdf  model_l5kg-r5kg.urdf
