################################################################################
#                                                                              #
# Copyright (C) 2023 Fondazione Istitito Italiano di Tecnologia (IIT)          #
# All Rights Reserved.                                                         #
#                                                                              #
################################################################################

add_subdirectory(@Experiment)
add_subdirectory(@FTSensor)
add_subdirectory(@Model)
add_subdirectory(@FTCalibParser)
